grammar.txt
program    -> statement*
statement  -> assignment ";" 
            | write ";"
            | read ";"
            | repeatStmt ";"
            | ifStmt 

assignment -> IDENTIFIER ":=" expression
ifStmt     -> "if" expression "then" statement* "end" ("else" statement* "end")?
repeatStmt -> "repeat" statement* "until" expression
write      -> "write" expression
read       -> "read" IDENTIFIER
expression -> equality
equality   -> comparison (("=" | "!=") comparison)*
comparison -> term (("<" | ">" | "<=" | ">=") term)*
term       -> factor (("+" | "-") factor)*
factor     -> primary (("*" | "/") primary)*
primary    -> NUMBER | STRING | "(" expression ")"
